<resources>
    <string name="app_name">SMS Bridge</string>

    <string name="action_settings">Settings</string>

    <string name="send">Send Registration ID</string>
    <string name="ready">You are set up and ready to send text messages!</string>
    <string name="save_project_id">Save Project ID</string>
    <string name="save">Save</string>
    <string name="save_sender_id">Your Project ID:</string>
    <string name="forward_incoming_messages">Forwarding incoming messages</string>
    <string name="forward_incoming_enabled">Forwarding enabled</string>
    <string name="error_no_play_services">No valid Google Play Services APK found.</string>
</resources>
