<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/senderIdPanel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputLayoutSenderId"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/senderIdInputView"
                            android:layout_width="fill_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="center"
                            android:hint="@string/save_sender_id"
                            android:text="576549653959"
                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>


                    <Button
                        android:id="@+id/saveProjectId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/save_project_id" />



                </LinearLayout>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/registrationProgressBar" />

                <Button
                    android:id="@+id/send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/send" />

                <TextView
                    android:id="@+id/display"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/ready"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/forward_incoming_messages"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/forwardingEnabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textOff="OFF"
                    android:textOn="ON"
                    android:text="@string/forward_incoming_enabled"/>

                <Button
                    android:id="@+id/saveForwarning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/save" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>